--- a/TableViewDemoImageRow/Base.lproj/Main.storyboard
+++ b/TableViewDemoImageRow/Base.lproj/Main.storyboard
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Aag-lt-YgY">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TableViewDemoImageRow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="white" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aR7-zk-YJw">
+                                <rect key="frame" x="0.0" y="88" width="414" height="110"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CELL1" id="WGJ-h5-05v" customClass="EachRow" customModule="TableViewDemoImageRow" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WGJ-h5-05v" id="0Mx-Hn-g2j">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5l3-IC-5Ih">
+                                                    <rect key="frame" x="20" y="-42" width="98" height="127.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="98" id="sRv-SG-UWt"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5C-EE-2He">
+                                                    <rect key="frame" x="144" y="11.5" width="41.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lo9-pw-txB">
+                                                    <rect key="frame" x="219.5" y="6" width="105.5" height="31.5"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    <connections>
+                                                        <action selector="didTapButton" destination="WGJ-h5-05v" eventType="touchUpInside" id="pGx-jf-yI3"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5l3-IC-5Ih" firstAttribute="top" secondItem="0Mx-Hn-g2j" secondAttribute="topMargin" constant="-53" id="Bc5-uY-IYT"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Lo9-pw-txB" secondAttribute="trailing" constant="69" id="Hfl-co-Yqs"/>
+                                                <constraint firstItem="5l3-IC-5Ih" firstAttribute="leading" secondItem="0Mx-Hn-g2j" secondAttribute="leadingMargin" id="I51-jW-4fc"/>
+                                                <constraint firstItem="Lo9-pw-txB" firstAttribute="centerY" secondItem="W5C-EE-2He" secondAttribute="centerY" id="VC2-5k-ll1"/>
+                                                <constraint firstItem="W5C-EE-2He" firstAttribute="leading" secondItem="5l3-IC-5Ih" secondAttribute="trailing" constant="26" id="WYv-gq-iGd"/>
+                                                <constraint firstItem="Lo9-pw-txB" firstAttribute="top" secondItem="0Mx-Hn-g2j" secondAttribute="topMargin" constant="-5" id="dtr-I8-aJU"/>
+                                                <constraint firstItem="Lo9-pw-txB" firstAttribute="centerY" secondItem="5l3-IC-5Ih" secondAttribute="centerY" id="pAs-yU-hmm"/>
+                                                <constraint firstItem="Lo9-pw-txB" firstAttribute="leading" secondItem="W5C-EE-2He" secondAttribute="trailing" constant="34" id="x6a-XX-6Om"/>
+                                                <constraint firstItem="Lo9-pw-txB" firstAttribute="centerY" secondItem="0Mx-Hn-g2j" secondAttribute="centerY" id="yop-KK-O1p"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iv1" destination="5l3-IC-5Ih" id="Z3w-Qi-Gdx"/>
+                                            <outlet property="myLabel" destination="W5C-EE-2He" id="rwd-En-P0l"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aR7-zk-YJw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Bu1-Sl-Rbs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aR7-zk-YJw" secondAttribute="bottom" constant="664" id="OHG-ph-c77"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aR7-zk-YJw" secondAttribute="trailing" id="ZEy-dN-ql3"/>
+                            <constraint firstItem="aR7-zk-YJw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kPA-gm-SmL"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="N6u-cT-hhr"/>
+                    <connections>
+                        <outlet property="tbv1" destination="aR7-zk-YJw" id="Qkp-FL-0bT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="350.72463768115944" y="61.607142857142854"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="hqR-zH-O5n">
+            <objects>
+                <viewController storyboardIdentifier="SecondView" id="GIP-jI-hhb" customClass="SecondViewController" customModule="TableViewDemoImageRow" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iTX-Y3-Bjr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="MyH-xX-gyK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ShT-pQ-SpG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1108.6956521739132" y="78.348214285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EZ1-QT-t4z">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Aag-lt-YgY" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Cp2-tt-O8M">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="AUO-fr-5fw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CoL-4t-kdz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-730" y="62"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
